[package]
name = "with_heap"
description = "Conditional compilation of heap-based or heapless code."
categories = ["embedded", "no-std", "rust-patterns"]
keywords = ["no_std", "no-std", "macro", "heap", "heapless"]
homepage = "https://ranging-rs.github.io/with_heap/"
repository = "https://github.com/ranging-rs/with_heap"
version = "0.1.0"
authors =["Peter Kehl"]
edition = "2021"
include = ["src/*.rs", "Cargo.toml"]
rust-version = "1.56" # Rust 1.56 is the oldest in 2021 edition
license  = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
